--- a/careers.html
+++ b/careers.html
@@ -119,11 +119,8 @@
                     <div class="col-lg-3 col-md-6 footer-contact" style="font-size: 1.5rem;">
                         <h4>Contact Us</h4>
                         <p>
-                            1300  Center Avenue<br>
-                            Fresno, California<br>
-                            United States <br>
-                            <strong>Phone:</strong> +123-456-7890<br>
-                            <strong>Email:</strong> info@example.com<br>
+                           Phone: 0504058173 <br/>
+Email: prishapatel0528@gmail.com
                         </p>
   
                         <div class="social-links">
